recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:8: error: reassignment to val
		length = length + increment
                       ^